# python

./: setup.sh
day00/ex00/: Hello.py
day00/ex01/: format_ft_time.py
day00/ex02/: find_ft_type.py  tester.py
day00/ex03/: NULL_not_found.py
day00/ex04/: whatis.py
day00/ex05/: building.py
day00/ex06/: filterstring.py  ft_filter.py
day00/ex07/: sos.py
day00/ex08/: Loading.py  tester.py
day00/ex09/: LICENSE  README.md  clear.py  pyproject.toml  pyproject.toml.disabled  requirements.txt  run.py  setup.py
day00/ex09/ft_package/: howToWinACoffee.py  utils.py
day00/ex09/src/: howToWinACofee.py
day00/ex09/src/coffee.egg-info/: PKG-INFO  SOURCES.txt
day00/ex09/test/: test.py  test2.py
day01/ex00/: give_bmi.py
day01/ex01/: array2D.py
day01/ex02/: load_image.py  tester.py
day01/ex03/: load_image.py  zoom.py
day01/ex04/: load_image.py  rotate.py
day01/ex05/: load_image.py  pimp_image.py  tester.py
day02/ex01/: aff_life.py  load_csv.py
day02/ex02/: aff_pop.py
day02/ex03/: load_csv.py  projection_life.py
day03/ex00/: S1E9.py  tester.py
day03/ex01/: S1E7.py  S1E9.py  testError.py  tester.py
day03/ex02/: DiamondTrap.py  S1E9.py  tester.py
day03/ex03/: ft_calculator.py
day03/ex04/: ft_calculator.py
day04/ex00/: statistics.py
day04/ex01/: in_out.py
day04/ex02/: callLimit.py
day04/ex03/: new_student.py
