[project]
name = "lusokol_package"
version = "0.0.1"
authors = [
    { name="Lucas Sokol", email="sokol.lucas@gmail.com"},
]
description = "A small useless package from lusokol"
readme = "README.md"
requires-python = "3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: Linux",
]
[project.urls]
Homepage = "https://github.com/lusokol/python/tree/main/day00/ex09"
Issues = "https://github.com/lusokol/python/tree/main/day00/ex09/issues"