[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
    { name="Lucas Sokol", email="sokol.lucas@gmail.com"},
]
description = "A small useless package from lusokol"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]

[tool.setuptools.packages]
find = {}

[project.urls]
Homepage = "https://github.com/lusokol/python/tree/main/day00/ex09"
Issues = "https://github.com/lusokol/python/tree/main/day00/ex09/issues"